unpackaged/main/default/objects/pse__Region_Plan__c/fields/psa_Practice__c.field-meta.xml
<CustomField>
    <fullName>psa_Practice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Practice</label>
    <referenceTo>pse__Practice__c</referenceTo>
    <relationshipLabel>Region Plans</relationshipLabel>
    <relationshipName>Region_Plans</relationshipName>
    <type>Lookup</type>
</CustomField>