unpackaged/main/default/objects/pse__Region_Plan__c/fields/pse__Planned_Revenue__c.field-meta.xml
<CustomField>
    <fullName>pse__Planned_Revenue__c</fullName>
    <label>Planned Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>