unpackaged/main/default/objects/pse__Region_Plan__c/fields/pse__Region_Owner__c.field-meta.xml
<CustomField>
    <fullName>pse__Region_Owner__c</fullName>
    <formula>pse__Region__r.pse__Region_Head__r.FirstName &amp; " " &amp; pse__Region__r.pse__Region_Head__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Region Owner</label>
    <type>Text</type>
</CustomField>