unpackaged/main/default/objects/pse__Region_Plan__c/fields/pse__Region_Plan_For__c.field-meta.xml
<CustomField>
    <fullName>pse__Region_Plan_For__c</fullName>
    <description>Concatenated Region and Time Period Names (with a hyphen, ' - ', in between).</description>
    <formula>pse__Region__r.Name &amp; ' - ' &amp; pse__Time_Period__r.Name</formula>
    <label>Region Plan For</label>
    <type>Text</type>
</CustomField>