unpackaged/main/default/objects/pse__Region_Plan__c/validationRules/pse__Plan_must_have_same_currency_as_Region.validationRule-meta.xml
<ValidationRule>
    <fullName>pse__Plan_must_have_same_currency_as_Region</fullName>
    <active>true</active>
    <description>A Region Plan record must use the same currency as its parent Region.</description>
    <errorConditionFormula>NOT(TEXT(CurrencyIsoCode) = TEXT(pse__Region__r.CurrencyIsoCode))</errorConditionFormula>
    <errorDisplayField>CurrencyIsoCode</errorDisplayField>
    <errorMessage>A Region Plan record must use the same currency as its parent Region.</errorMessage>
</ValidationRule>